--- a/src/main/resources/assets/witchinggadgets/lang/en_US.lang
+++ b/src/main/resources/assets/witchinggadgets/lang/en_US.lang
@@ -20,8 +20,15 @@ tile.WG_WoodenDevice.saunaStove.name=Thaumic Sauna Stove
 tile.WG_WoodenDevice.labelLibrary.name=Aspect Library
 
 tile.WG_MetalDevice.essentiaPump.name=Essentia Pump
-
 tile.WG_MetalDevice.voidmetalBlock.name=Void metal Block
+tile.WG_MetalDevice.terraformer.name=Arcane Terrestrial Reformer
+tile.WG_MetalDevice.tfFocusPlains.name=Terrestrial Focus: Plains
+tile.WG_MetalDevice.tfFocusColdTaiga.name=Terrestrial Focus: Cold Taiga
+tile.WG_MetalDevice.tfFocusDesert.name=Terrestrial Focus: Desert
+tile.WG_MetalDevice.tfFocusJungle.name=Terrestrial Focus: Jungle
+tile.WG_MetalDevice.tfFocusHell.name=Terrestrial Focus: Hell
+tile.WG_MetalDevice.tfFocusTaint.name=Terrestrial Focus: Tainted Lands
+tile.WG_MetalDevice.tfFocusMushroom.name=Terrestrial Focus: Mushroom Island
 
 
 tile.WG_RoseVine.name=Rose Vines
@@ -539,14 +546,6 @@ witchinggadgets_research_page.PRIMORDIALARMOR.2=§l§n     Primal Affinities:   
 witchinggadgets_research_name.EMPOWERPEARL=Pearl Revitalization
 witchinggadgets_research_text.EMPOWERPEARL=[WG] 120 bpm
 witchinggadgets_research_page.EMPOWERPEARL.1=The power that once pulsed through Primordial Pearl is gone. Well, not gone, just infused into a different item. But not all hope is lost! The pearl itself still exists, you just have to empower it once more, by infusing it...
-
-
-
-
-
-#-----------------------#
-#DEPRECATED
-#-----------------------#
 
 #TERRAFORMER
 witchinggadgets_research_name.TERRAFORMER=Thaumic Terraforming
