Misc additions: +reworked dependencies +changed Clusters to give out materials based on the GT multiplier (i.e. Redstone) +reworked some more recipes +fixed nugget dublication gives out oreberries +removed dublicate BlastTrippling recipes +fixed soulbound graphics bug +added Primitive & Non-Primitive EBF recipes that heat requirements are <=1000 to infernal blast furnace

--- a/src/main/resources/assets/witchinggadgets/lang/en_US.lang
+++ b/src/main/resources/assets/witchinggadgets/lang/en_US.lang
@@ -145,7 +145,7 @@ enchantment.wg.stealth=Stealth
 enchantment.wg.backstab=Backstabbing
 enchantment.wg.rideProtect=Throwoff
 enchantment.wg.soulbound=Soul Tethered
-enchantment.soulbound=Soul Tethered
+enchantment.wg.soultether=Soul Tethered
 #
 # -- Random bits of text --
 wg.chat.notyourbag=§7This bag belongs to§r %1$s! §7You are not allowed to open it.§r
