--- a/src/main/resources/assets/witchinggadgets/lang/en_US.lang
+++ b/src/main/resources/assets/witchinggadgets/lang/en_US.lang
@@ -361,7 +361,7 @@ witchinggadgets_research_page.PURECINNABAR.1=Native clusters are rare concentrat
 #
 witchinggadgets_research_name.METALLURGICPERFECTION_CLUSTERS=Metallurgic Perfection: Purification
 witchinggadgets_research_text.METALLURGICPERFECTION_CLUSTERS=[WG] Purifying most ores into native clusters
-witchinggadgets_research_page.METALLURGICPERFECTION_CLUSTERS.1=The process of metal purification has proven to be very similar for every metal you have tried it on so far.<BR>Following this logic, you have created a general theory for the process, allowing you to transform the majority of ores you encounter into purified clusters, richer in their metal concentration.
+witchinggadgets_research_page.METALLURGICPERFECTION_CLUSTERS.1=The process of metal purification has proven to be very similar for every metal you have tried it on so far.<BR>Following this logic, you have created a general theory for the process, allowing you to transform the majority of ores you encounter into purified clusters, richer in their metal concentration. Your knowledge has enabled you too higher the efficency of the procedure aswell.
 #
 witchinggadgets_research_name.METALLURGICPERFECTION_TRANSMUTATION=Metallurgic Perfection: Transmutation
 witchinggadgets_research_text.METALLURGICPERFECTION_TRANSMUTATION=[WG] Transforming most metals into others
@@ -395,7 +395,7 @@ witchinggadgets_research_page.TRANSALUMINUM.1=You have discovered a way to multi
 #INFERNALBLASTFURNACE
 witchinggadgets_research_name.INFERNALBLASTFURNACE=Infernal Blast Furnace
 witchinggadgets_research_text.INFERNALBLASTFURNACE=[WG] IT BURNS!...it smelts, actually...
-witchinggadgets_research_page.INFERNALBLASTFURNACE.1=Burning with an intensely hot magical flame, this furnace is the Thaumaturge's response to the engineer's tedious steps of cleaning their ores. It will smelt any clusters of metal thrown within it into three ingots, which the occasional nugget added to that.<BR>Furthermore, should you require steel for other operations, the impure flame of this devilish artifact is a surefire way to get it. Simply throw in iron ingots or blocks and wait.<BR>The speed of this construct can be increased by the same means as on the Infernal Furnace.
+witchinggadgets_research_page.INFERNALBLASTFURNACE.1=Burning with an intensely hot magical flame, this furnace is the Thaumaturge's response to the engineer's tedious steps of cleaning their ores. It will smelt any clusters of metal thrown within it into three ingots, which the occasional nugget added to that.<BR>Furthermore, should you require steel for other operations, the impure flame of this devilish artifact is a surefire way to get it. Simply throw in iron ingots or blocks and place Ignis essentia jars aside and wait.<BR>The speed of this construct can be increased by the same means as on the Infernal Furnace.
 witchinggadgets_research_page.INFERNALBLASTFURNACE.2=For normal smelting purposes however, this flame is far too hot, so don't try throwing chicken into it.<BR>Disclaimer: Though the lava in this furnace has been enhanced by magic, it is still just as (if not more) dangerous. Any items not supposed to go into this furnace will be vapourized, as will any Thaumaturge stupid enough to fall into it.
 witchinggadgets_research_page.INFERNALBLASTFURNACE.3=§oThe Thaumonomicon is a bit unprecise in its depiction of this construct's structure. The stair blocks at the top actually need to face towards the middle block, with the corners fitting in.§r
 
@@ -667,3 +667,7 @@ witchinggadgets_research_name.THAUMICAPPLICATOR=
 witchinggadgets_research_text.THAUMICAPPLICATOR=[WG] 
 witchinggadgets_research_page.THAUMICAPPLICATOR.1=
 #
+
+tc.research_page.PRIMORDRIALPEARL.1=You have started to understand how primodial pearls work and found a way to replicate them for future use. By hammering the primodial pearl into 3 pieces, you found that its losing energy really quickly. Perhaps, there is a way to reform each pieces them into a pearl.
+tc.research_name.PRIMORDRIALPEARL=Primordial Pearl
+tc.research_text.PRIMORDRIALPEARL=[GT:NH] You found a magical Way of duplication;
