--- a/src/main/resources/assets/witchinggadgets/lang/en_US.lang
+++ b/src/main/resources/assets/witchinggadgets/lang/en_US.lang
@@ -363,7 +363,7 @@ witchinggadgets_research_name.METALLURGICPERFECTION_CLUSTERS=Metallurgic Perfect
 witchinggadgets_research_text.METALLURGICPERFECTION_CLUSTERS=[WG] Purifying most ores into native clusters
 witchinggadgets_research_page.METALLURGICPERFECTION_CLUSTERS.1=The process of metal purification has proven to be very similar for every metal you have tried it on so far.<BR>Following this logic, you have created a general theory for the process, allowing you to transform the majority of ores you encounter into purified clusters, richer in their metal concentration. Your knowledge has enabled you too higher the efficency of the procedure aswell.
 #
-witchinggadgets_research_name.METALLURGICPERFECTION_TRANSMUTATION=Metallurgic Perfection: Transmutation
+witchinggadgets_research_name.METALLURGICPERFECTION_TRANSMUTATION=[WiP] Metallurgic Perfection: Transmutation
 witchinggadgets_research_text.METALLURGICPERFECTION_TRANSMUTATION=[WG] Transforming most metals into others
 witchinggadgets_research_page.METALLURGICPERFECTION_TRANSMUTATION.1=The process of metallic transmutation has proven to be very similar for every metal you have tried it on so far.<BR>Following this logic, you have created a general theory for the process, allowing you to synthesize additional nuggets from an essential mix of §5metallum§0 and the respective aspects that identify the metal.
 #
@@ -393,7 +393,7 @@ witchinggadgets_research_text.TRANSALUMINUM=[WG] Transformation of metals into a
 witchinggadgets_research_page.TRANSALUMINUM.1=You have discovered a way to multiply aluminum by steeping aluminum nuggets in §5metallum§0 harvested from other metals.
 
 #INFERNALBLASTFURNACE
-witchinggadgets_research_name.INFERNALBLASTFURNACE=Infernal Blast Furnace
+witchinggadgets_research_name.INFERNALBLASTFURNACE=[WiP] Infernal Blast Furnace
 witchinggadgets_research_text.INFERNALBLASTFURNACE=[WG] IT BURNS!...it smelts, actually...
 witchinggadgets_research_page.INFERNALBLASTFURNACE.1=Burning with an intensely hot magical flame, this furnace is the Thaumaturge's response to the engineer's tedious steps of cleaning their ores. It will smelt any clusters of metal thrown within it into three ingots, which the occasional nugget added to that.<BR>Furthermore, should you require steel for other operations, the impure flame of this devilish artifact is a surefire way to get it. Simply throw in iron ingots or blocks and place Ignis essentia jars aside and wait.<BR>The speed of this construct can be increased by the same means as on the Infernal Furnace.
 witchinggadgets_research_page.INFERNALBLASTFURNACE.2=For normal smelting purposes however, this flame is far too hot, so don't try throwing chicken into it.<BR>Disclaimer: Though the lava in this furnace has been enhanced by magic, it is still just as (if not more) dangerous. Any items not supposed to go into this furnace will be vapourized, as will any Thaumaturge stupid enough to fall into it.
@@ -507,7 +507,7 @@ witchinggadgets_research_page.PRIMORDIALGEARSET.1=Like a flash of lightning, the
 witchinggadgets_research_page.PRIMORDIALGEARSET.2=But that's not all! The runes and sockets on said gear will be the perfect for imbuing processes, stengthening their potential even further. Each piece is infused with elemental abilities, increasing their potential immensly! 
 
 #PRIMORDIALWEAPONRY
-witchinggadgets_research_name.PRIMORDIALWEAPONRY=Primordial Weaponry
+witchinggadgets_research_name.PRIMORDIALWEAPONRY=[WiP] Primordial Weaponry
 witchinggadgets_research_text.PRIMORDIALWEAPONRY=[WG] Mobile primal launch platform
 witchinggadgets_research_page.PRIMORDIALWEAPONRY.1=Designed only to slay creatures of evil, the Primordial Weapons have surpassed any magical weapon you may have crafted before. Not only do all carry a unique innert ability, each is tuneable to a primal affinity, granting it further effects. And don't be scared by their massive apearance, for their wielder does not feel their weight, unlike the target upon which they are swung.
 witchinggadgets_research_page.PRIMORDIALWEAPONRY.2=The Primordial Claymore seems to assist you in aiming your strikes. The blade commonly hits your foe's neck, resulting in decapitation.<BR>The Primordial Warhammer uses its immense weight to literally squash your foes. This results in double damage done to slimes and spiders, and a chance of heavy concussions among all others. It also breaks blocks in a 3x3 when digging, unless you're sneaking. <BR>The Primordial Greataxe cleaves through foliage like a hot knife through butter, but splits apart armor just aswell. The damage of the weapon increases based on the armor of the enemy, and the armor itself suffers from increased damage aswell. 
@@ -528,7 +528,7 @@ witchinggadgets_research_name.PRIMORDIALGREATAXE=Primordial Greataxe
 witchinggadgets_research_text.PRIMORDIALGREATAXE=[WG] Cleave them apart
 witchinggadgets_research_page.PRIMORDIALGREATAXE.1=The Primordial Greataxe cleaves through foilage and wood like a hot knife through butter. But it's sharp edges cut through much more than wood.
 
-witchinggadgets_research_name.PRIMORDIALARMOR=Primordial Armor
+witchinggadgets_research_name.PRIMORDIALARMOR=[WiP] Primordial Armor
 witchinggadgets_research_text.PRIMORDIALARMOR=[WG] Bipedal tank
 witchinggadgets_research_page.PRIMORDIALARMOR.1=Primordial Armor perfects your protection against foes. It will block quite a lot of damage on its own, but it is also receptive for runic enchancements, allowing you to strengthen it even further. In addition to that, it has different effects based on its primal affinity, which you can switch in the active ability menu. §o(Default Hotkey: R)§r<BR>Just like Fortress Armor, it can also be outfitted with Goggles of Revealing and the respective faceplates.
 witchinggadgets_research_page.PRIMORDIALARMOR.2=§l§n     Primal Affinities:     §r<BR>§nAer:§r Any projectile shot at you is caught by a gust of air and propelled right back at the shooter. §nTerra:§r Increased protection against attacks that would normally penetrate your armor.                        §nIgnis:§r The damage you sustain from flames and explosions is reduced immensely and you will be extinguished when necessary.     §nAqua:§r Minor maladies like (taint) poison, blindness, withering and nausea are cured. Will not work on warp effects.                       §nOrdo:§r The severity and duration of all warp-based status effects is reduced.                    §nPerditio:§r Most hits on the user are avenged by striking the attacker with blindness and slowness. 
