--- a/src/main/resources/assets/witchinggadgets/lang/zh_CN.lang
+++ b/src/main/resources/assets/witchinggadgets/lang/zh_CN.lang
@@ -78,13 +78,13 @@ item.WG_AdvancedScribingTools.name=发光笔与墨
 
 item.WG_Cloak.standard.name=斗篷
 item.WG_Cloak.storage.name=奇术斗篷
-item.WG_Cloak.raven.name=黑鸦斗篷
+item.WG_Cloak.raven.name=乌鸦斗篷
 item.WG_Cloak.spectral.name=幽灵斗篷
 item.WG_Cloak.wolf.name=野狼斗篷
 
 item.WG_Kama.standard.name=卡玛短袍
 item.WG_Kama.storage.name=奇术短袍
-item.WG_Kama.raven.name=黑鸦短袍
+item.WG_Kama.raven.name=乌鸦短袍
 item.WG_Kama.spectral.name=幽灵短袍
 item.WG_Kama.wolf.name=野狼短袍
 
@@ -326,9 +326,9 @@ witchinggadgets_research_name.CLOAK_STORAGE=奇术斗篷
 witchinggadgets_research_text.CLOAK_STORAGE=[WG]我丢了这里的钥匙...
 witchinggadgets_research_page.CLOAK_STORAGE.1=将奇术口袋和炫酷的斗篷相结合,你就有了更多的储存空间!斗篷也有了50%的额外容量.
 #
-witchinggadgets_research_name.CLOAK_RAVEN=黑鸦斗篷
+witchinggadgets_research_name.CLOAK_RAVEN=乌鸦斗篷
 witchinggadgets_research_text.CLOAK_RAVEN=[WG] CA-CAW!
-witchinggadgets_research_page.CLOAK_RAVEN.1=在穿过暮色森林的旅行中,你遇到了最迷人的森林渡鸦.这只非凡的鸟在空中表现出高度的敏捷性和操控性十分令人羡慕.<BR>你也可以用羽毛装饰你的斗篷,并灌注神奇的力量,而不是坐着嫉妒它...<BR>穿着这件斗篷,你飞行时的速度明显增加.如果你不飞行,斗篷会让你滑翔.可以在ActiveAbility菜单中禁用滑翔.
+witchinggadgets_research_page.CLOAK_RAVEN.1=在穿过暮色森林的旅行中,你遇到了最迷人的森林乌鸦.这只非凡的鸟在空中表现出高度的敏捷性和操控性十分令人羡慕.<BR>你也可以用羽毛装饰你的斗篷,并灌注神奇的力量,而不是坐着嫉妒它...<BR>穿着这件斗篷,你飞行时的速度明显增加.如果你不飞行,斗篷会让你滑翔.可以在ActiveAbility菜单中禁用滑翔.
 # OLD witchinggadgets_research_page.CLOAK_RAVEN.1=On your travels throughout the Twilight Forest, you have come across the most fascinating Forest Raven. This remarkable bird appears to always find back to his nesting place, even within the dense and dark forest it calls home.<BR>Plucking a feather from it, you have discovered that it, albeit in small scale, inherits this ability. Now you just have to amplify this ability with your thaumic capabilities and infuse your garment with it. The result is the §lMantle of the Raven§r which allows you to set and return to your nesting place at the cost of a raven's feather. You may substitute three chicken feathers.
 #
 witchinggadgets_research_name.CLOAK_SPECTRAL=幽灵斗篷
